remove jmodel,change url,site_key in view

--- a/pannel/templates/login.html
+++ b/pannel/templates/login.html
@@ -77,7 +77,7 @@
 
                 {% endif %}
                 
-                <div class="g-recaptcha" data-sitekey="Yor DATA SITEKEY"></div>
+                <div class="g-recaptcha" data-sitekey="{{ site_key }}"></div>
                 {% if messages %}
                 <br>
                 {% for message in messages %}
