--- a/pannel/templates/account/navbar.html
+++ b/pannel/templates/account/navbar.html
@@ -49,7 +49,7 @@
             </li>
 
             <li class="nav-item" id="edit">
-                <a class="nav-link disabled" href="{% url 'pannel:edit' %}">{% trans 'Edit'%}</a>
+                <a class="nav-link disabled" href="{% url 'pannel:edit_view' %}">{% trans 'Edit'%}</a>
             </li>
 
             <li class="nav-item" id="service">
