--- a/pannel/templates/account/navbar.html
+++ b/pannel/templates/account/navbar.html
@@ -53,7 +53,7 @@
             </li>
 
             <li class="nav-item" id="service">
-                <a class="nav-link disabled" href="#">{% trans 'Services'%}</a>
+                <a class="nav-link disabled" href="{% url 'pannel:service_view' %}">{% trans 'Services'%}</a>
             </li>
         </ul>
 
