--- a/pannel/templates/base.html
+++ b/pannel/templates/base.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load static i18n %}
 
 <!DOCTYPE html>
 
@@ -24,6 +24,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <!-- <link rel="stylesheet" href="{% static '/bootstrap-4/css/bootstrap.min.css' %}">
+    <script src="{% static '/js/jquery.min.js' %}"></script>
+    <script src="{% static '/js/popper.js' %}"></script>
+    <script src="{% static '/bootstrap-4/js/bootstrap.min.js' %}"></script> -->
+
 
     {% block head %}
 
