--- a/pannel/templates/account/list.html
+++ b/pannel/templates/account/list.html
@@ -71,7 +71,7 @@
         </tbody>
     </table>
 
-
+{% if page_obj.has_next or page_obj.has_previous %}
 
 <nav aria-label="Page navigation example" dir="LTR">
     <ul class="pagination justify-content-center">
@@ -104,7 +104,7 @@
 
     </ul>
 </nav>
-
+{% endif %}
 
 </div>
 
