create home app for decorate users and blockips

--- a/pannel/templates/account/edit.html
+++ b/pannel/templates/account/edit.html
@@ -48,7 +48,7 @@
 
 {% block content %}
 
-{% include 'account/navbar.html'%}
+{% include 'navbar.html'%}
 
 <script>
     $("#edit").addClass('active');    
@@ -187,6 +187,7 @@
     var lang = 'fa';
 </script>
 {% endif %}
+
 <!-- Autocomplete search input -->
 <script>
     $(function () {
