--- a/pannel/templates/account/list.html
+++ b/pannel/templates/account/list.html
@@ -24,7 +24,7 @@
 
 
 {% block content %}
-{% include 'account/navbar.html'%}
+{% include 'navbar.html'%}
 
 <script>
     $("#list").addClass('active');    
