--- a/pannel/templates/account/add.html
+++ b/pannel/templates/account/add.html
@@ -55,7 +55,7 @@ margin-left: 100px;
 
 
 {% block content %}
-{% include 'account/navbar.html'%}
+{% include 'navbar.html'%}
 
 <script>
     $("#add").addClass('active');    
