--- a/pannel/templates/account/main.html
+++ b/pannel/templates/account/main.html
@@ -36,7 +36,7 @@
 
 {% block content %}
 
-{% include 'account/navbar.html'%}
+{% include 'navbar.html'%}
 
 <script>
     $("#main").addClass('active');    
