--- a/pannel/templates/navbar.html
+++ b/pannel/templates/navbar.html
@@ -1,16 +1,15 @@
 {% load static i18n %}
+{% load vpn_tags %}
 
 
 <style>
     .navbar-brand {
-    color: white !important;
+        color: white !important;
     }
 
-    .nav-link{
-        color:black !important;
-    }
-
-
+    /* .nav-link {
+        color: black !important;
+    } */
 </style>
 
 {% get_current_language as LANGUAGE_CODE %}
@@ -26,38 +25,54 @@
 
 {% endif %}
 
+
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #36a1ee;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="">{% trans 'Accounts Manage Page' %}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarToggler">
-        <a class="navbar-brand" href="">{% trans 'Wellcome to our Web Site' %}</a>
-        
-        <ul class="navbar-nav mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'pannel:home'%}"> {% trans 'Home' %} </a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+
+            <li class="nav-item" id="main">
+                <a class="nav-link" href="{% url 'pannel:main' %}">{% trans 'Main' %}</a>
+            </li>
+
+            <li class="nav-item" id="list">
+                <a class="nav-link" href="{% url 'pannel:list' %}">{% trans 'list' %}</a>
+            </li>
+
+            <li class="nav-item" id="add">
+                <a class="nav-link" href="{% url 'pannel:add' %}">{% trans 'Add' %}</a>
+            </li>
+
+            <li class="nav-item" id="edit">
+                <a class="nav-link disabled" href="{% url 'pannel:edit_view' %}">{% trans 'Edit'%}</a>
+            </li>
+
+            <li class="nav-item" id="service">
+                <a class="nav-link disabled" href="{% url 'pannel:service_view' %}">{% trans 'Services'%}</a>
             </li>
         </ul>
+
     </div>
-    {% if user.is_authenticated %}
-        <a class="nav-link" href="{% url 'pannel:logout' %}">{% trans 'Logout' %}</a>
 
-    {% else %}
-        <a class="nav-link" href="{% url 'pannel:login' %}">{% trans 'Login' %}</a>
-    
-    {% endif %}
-
-    {% get_current_language as LANGUAGE_CODE %}
+        {% get_current_language as LANGUAGE_CODE %}
         {% if LANGUAGE_CODE == 'fa' %}
-        <a href="/en/">
-            <img src="{% static '/img/us-flag.jpg' %}" alt="us-flag" width="25px" style="background: transparent; background-color: #36a1ee; border-radius: 15%;">
+        {% change_current_url_lang request.path 'en' as url%}
+        <a href="{{ url }}">
+            <img src="{% static '/img/us-flag.jpg' %}" alt="us-flag" width="25px"
+                style="background: transparent; background-color: #36a1ee; border-radius: 15%;">
         </a>
-    {% else %}
-        <a href="/fa/">
-            <img src="{% static '/img/iran-flag.png' %}" alt="iran-flag" width="25px" style="background: transparent; background-color: #36a1ee; border-radius: 15%;">
+        {% else %}
+        {% change_current_url_lang request.path 'fa' as url%}
+        <a href="{{ url }}">
+            <img src="{% static '/img/iran-flag.png' %}" alt="iran-flag" width="25px"
+                style="background: transparent; background-color: #36a1ee; border-radius: 15%;">
         </a>
-    {% endif %}
-</nav>
+        {% endif %}
+        <a class="nav-link disabled" href="{% url 'home:logout' %}">{% trans 'Logout'%}</a>
 
-<br><br><br>
+</nav>
