--- a/pannel/templates/service.html
+++ b/pannel/templates/service.html
@@ -25,7 +25,7 @@
 
 {% block content %}
 
-{% include 'account/navbar.html'%}
+{% include 'navbar.html'%}
 
 <script>
     $("#service").addClass('active');    
