--- a/pannel/templates/base.html
+++ b/pannel/templates/base.html
@@ -12,13 +12,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="{% static '/bootstrap-4/css/bootstrap.min.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.css'%}">
     <script src="{% static '/js/jquery-3.min.js' %}"></script>
     <script src="{% static '/js/popper.min.js' %}"></script>
     <script src="{% static '/bootstrap-4/js/bootstrap.min.js' %}"></script>
-
+    <script src="{% static '/js/jquery-ui.js' %}"></script>
 
     {% block head %}
 
@@ -26,9 +25,9 @@
 
     <style>
 
-    body{
-        background-color:#e3f2fd;
-    }
+        body{
+            background-color:#e3f2fd;
+        }
 
     {% get_current_language as LANGUAGE_CODE %}
     {% if LANGUAGE_CODE == 'fa' %}
@@ -46,9 +45,10 @@
     {% endif %}
 
 
-        {% block css %}
+    {% block css %}
 
-        {% endblock %}
+    {% endblock %}
+
     </style>
 
 <title>
@@ -66,5 +66,6 @@
 
         {% endblock %}
     </div>
+    
 </body>
 </html>
