--- a/pannel/templates/navbar.html
+++ b/pannel/templates/navbar.html
@@ -49,6 +49,7 @@
     </div>
         <a class="nav-link">{{ user.username | title }}</a>
         <a class="nav-link disabled" href="{% url 'home:logout' %}">{% trans 'Logout'%}</a>
+        <span style="visibility: hidden;">---</span>
         {% get_current_language as LANGUAGE_CODE %}
         {% if LANGUAGE_CODE == 'fa' %}
         {% change_current_url_lang request.path 'en' as url%}
