--- a/home/templates/navbar_home.html
+++ b/home/templates/navbar_home.html
@@ -52,7 +52,7 @@
     <span style="visibility: hidden;">--</span>
     {% get_current_language as LANGUAGE_CODE %}
         {% if LANGUAGE_CODE == 'fa' %}
-        <a href="/en/">
+        <a href="/">
             <img src="{% static '/img/us-flag.jpg' %}" alt="us-flag" width="25px" style="background: transparent; background-color: #36a1ee; border-radius: 15%;">
         </a>
     {% else %}
