--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,52 +2,80 @@
 
 {% block body %}
 <h2 class="mb-4 mt-4">User Management Page</h2>
+<div class="row">
+    
+    <div class="col-4">
+        <div class="d-flex justify-content-center">
+            <div class="py-4 px-5 rounded" style="border: 2px solid black;width: 80%;">
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="form-group mb-2">
+                        <label class="mb-2" for="oc_username">Oc Username : </label>
+                       {{ form.oc_username }}
+                    </div>
+                    {% if error %}
+                    <div class="bg-danger px-2 py-1 rounded text-center my-2" style="font-size: 12px;">
+                        {{ form.oc_username.errors.0 }}
+                      </div>
+                    {% endif %}
+                    <div class="form-group mb-4">
+                        <label class="mb-2" for="oc_password">Oc Password : </label>
+                       {{ form.oc_password }}
+                    </div>
+                    <input type="submit" value="Add User">
+                </form>
 
-<div class="text-right mb-3">
-    <button class="btn btn-lg btn-outline-light" onclick="addUser()">Add User</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-8">
+            <table class="table table-striped table-dark">
+                <thead>
+                    <tr class="text-center">
+                        <th scope="col">Row</th>
+                        <th scope="col">Ocserv Username</th>
+                        <th scope="col">Ocserv Password</th>
+                        <th scope="col">Active</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for user in users %}
+                    <tr class="text-center">
+                        <th scope="row">{{ forloop.counter }}</th>
+                        <td>{{ user.oc_username }}</td>
+                        <td>{{ user.oc_password }}</td>
+                        <td>{{ user.oc_active }}</td>
+                        <td>
+                            {% if user.oc_active %}
+                            <button class="btn btn-outline-warning btn-sm mx-1" onclick="userHandler('{{ user.id }}', 'deactive')"
+                                id="deactive-{{ user.id }}">
+                                Deactive
+                            </button>
+                            {% else %}
+                            <button class="btn btn-outline-info btn-sm  mx-1" onclick="userHandler('{{ user.id }}', 'active')"
+                                id="active-{{ user.id }}">
+                                Active
+                            </button>
+                            {% endif %}
+
+                            <button class="btn btn-outline-danger btn-sm" onclick="deleteUser('{{ user.id }}')"
+                                id="del-{{ user.id }}">Delete</button>
+                            <button class="btn btn-outline-danger btn-sm" style="display: none;"
+                                onclick="confirmDelete('{{ user.id }}')" id="confirm-{{ user.id }}">Yes Delete</button>
+                            <button class="btn btn-outline-light btn-sm mx-1" style="display: none;"
+                                onclick="cancelDelete('{{ user.id }}')" id="cancel-{{ user.id }}">Cancel</button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
 </div>
 
-<table class="table table-striped table-dark">
-    <thead>
-        <tr class="text-center">
-            <th scope="col">Row</th>
-            <th scope="col">Ocserv Username</th>
-            <th scope="col">Ocserv Password</th>
-            <th scope="col">Active</th>
-            <th scope="col">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for user in object_list %}
-        <tr class="text-center">
-            <th scope="row">{{ forloop.counter }}</th>
-            <td>{{ user.oc_username }}</td>
-            <td>{{ user.oc_password }}</td>
-            <td>{{ user.oc_active }}</td>
-            <td>
-                {% if user.oc_active %}
-                <button class="btn btn-outline-warning btn-sm mx-1" onclick="userHandler('{{ user.id }}', 'deactive')"
-                    id="deactive-{{ user.id }}">
-                    Deactive
-                </button>
-                {% else %}
-                <button class="btn btn-outline-info btn-sm  mx-1" onclick="userHandler('{{ user.id }}', 'active')"
-                    id="active-{{ user.id }}">
-                    Active
-                </button>
-                {% endif %}
+</div>
 
-                <button class="btn btn-outline-danger btn-sm" onclick="deleteUser('{{ user.id }}')"
-                    id="del-{{ user.id }}">Delete</button>
-                <button class="btn btn-outline-danger btn-sm" style="display: none;"
-                    onclick="confirmDelete('{{ user.id }}')" id="confirm-{{ user.id }}">Yes Delete</button>
-                <button class="btn btn-outline-light btn-sm mx-1" style="display: none;"
-                    onclick="cancelDelete('{{ user.id }}')" id="cancel-{{ user.id }}">Cancel</button>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+
 
 <script>
     function addUser() {
