--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,6 +10,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'app:home' %}">Home</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'app:add_user' %}">Add User</a>
+      </li>
     </ul>
     {% endif %}
     <ul class="navbar-nav ml-auto">
