--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/fec3151e09.js" crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %}</title>
     {% block head %}{% endblock %}
 </head>
