--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -14,7 +14,7 @@
                 <label class="mb-2" for="new_password">New Password : </label>
                 <input type="password" class="form-control" id="new password" placeholder="New Password" name="new_password">
             </div>
-            <input class="btn btn-lg btn-light mb-3" type="submit" value="Change Password">
+            <input class="btn btn-lg btn-outline-success mb-3" type="submit" value="Change Password">
         </form>
         {% if error %}
         <center>
@@ -26,10 +26,5 @@
         </form>
     </div>
 </div>
-
-<script>
-    var elm = '<a class="nav-link" href="#">Change Password</a>';
-    $("#auth").append(elm);
-</script>
 
 {% endblock %}
