--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -14,11 +14,10 @@
         <a class="nav-link" href="{% url 'app:add_user' %}">Add User</a>
       </li>
     </ul>
-    {% endif %}
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active" id="auth">
+        <a class="nav-link" href="{% url 'app:change_password' %}">Change Password</a>
       </li>
-      {% if user.is_authenticated %}
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'app:logout' %}">Logout</a>
       </li>
