service management added

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -104,7 +104,7 @@
                 location.reload(true);
             },
             error: function (response) {
-                alert(response["responseJSON"]["error"]);
+                alert("'chmod 644 /etc/ocserv/ocpasswd' to get access to sync ocpasswd with db")
             }
         });
     }
