--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -13,6 +13,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'app:add_user' %}">Add User</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'app:services' %}">Ocserv Services</a>
+      </li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active" id="auth">
