--- a/app/templates/add_user.html
+++ b/app/templates/add_user.html
@@ -2,32 +2,83 @@
 
 {% block body %}
 <h2 class="mb-4 mt-4">Add User Page</h2>
-
-<div class="d-flex justify-content-left mt-5">
-    <div class="py-4 px-5 rounded col-5 text-left" style="border: 2px solid black;width: 80%;">
-        <form method="post">
-            {% csrf_token %}
-            <div class="form-group mb-2">
-                <label class="mb-2" for="oc_username">Oc Username : </label>
-                {{ form.oc_username }}
+<div class="row">
+    <div class="col-10">
+        <div class="d-flex justify-content-center">
+            <div class="py-4 px-4 rounded text-left" style="border: 2px solid black;">
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-4">
+                            <div class="form-group mb-3">
+                                <label class="mb-2" for="oc_username">Oc Username : </label>
+                                {{ form.oc_username }}
+                            </div>
+                            <div class="form-group mb-3">
+                                <label class="mb-2" for="oc_password">Oc Password : </label>
+                                {{ form.oc_password }}
+                            </div>
+                            <div class="form-group mb-3">
+                                <label class="mb-2" for="expire_date">Expiration Date : </label>
+                                {{ form.expire_date }}
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group mb-4">
+                                <label class="" for="desc">User Description : </label>
+                                {{ form.desc }}
+                            </div>
+                        </div>
+                        {% if error or success %}
+                        <div class="col-4 mt-5">
+                            {% if form.oc_username.errors.0 %}
+                            <div class="bg-danger px-3 py-2 rounded text-center my-4" style="font-size: 14px;">
+                                {{ form.oc_username.errors.0 }}
+                            </div>
+                            {% endif %}
+                            {% if form.expire_date.errors.0 %}
+                            <div class="bg-danger px-3 py-2 rounded text-center my-4" style="font-size: 14px;">
+                                {{ form.expire_date.errors.0 }}
+                            </div>
+                            {% endif %}
+                            {% if success %}
+                            <br>
+                            <div class="bg-success px-3 py-2 rounded text-center my-2 text-capitalize mt-5" style="font-size: 14px;">
+                                {{ success }} added successfully
+                            </div>
+                            {% endif %}
+                        </div>
+                        {% endif %}
+                        <div class="col-12">
+                            <div class="text-center">
+                                <input type="submit" value="Add User" class="btn btn-outline-success">
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
-            {% if error %}
-            <div class="bg-danger px-2 py-1 rounded text-center my-2" style="font-size: 12px;">
-                {{ form.oc_username.errors.0 }}
-            </div>
-            {% endif %}
-            <div class="form-group mb-4">
-                <label class="mb-2" for="oc_password">Oc Password : </label>
-                {{ form.oc_password }}
-            </div>
-            <input type="submit" value="Add User" class="btn btn-outline-success">
-        </form>
-        {% if success %}
-        <div class="bg-success px-2 py-1 rounded text-center my-2" style="font-size: 12px;">
-            User added successfully
         </div>
-        {% endif %}
+    </div>
+    <div class="col-2 py-2 text-center" style="border: 2px solid black;">
+        <h4 class="text-center mt-4">Last Users</h4>
+        {% for user in last_users %}
+        <blockquote>
+            {{ user }}
+        </blockquote>
+        {% endfor %}
     </div>
 </div>
+
+<script>
+    $('#id_expire_date').datepicker({
+        format: "yyyy-mm-dd",
+        clearBtn: true,
+        templates: {
+            leftArrow: '<i class="fa fa-long-arrow-left"></i>',
+            rightArrow: '<i class="fa fa-long-arrow-right"></i>'
+        },
+        todayHighlight: true,
+    });
+</script>
 
 {% endblock %}
