--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,53 +1,106 @@
 {% extends 'base.html' %}
 
+{% block head %}
+<style>
+    .pagination>li>a {
+        background-color: #343a40;
+        color: white;
+    }
+    .pagination>li>a:focus,
+    .pagination>li>a:hover,
+    .pagination>li>span:focus,
+    .pagination>li>span:hover {
+        color: black;
+        background-color: #343a40;
+        border-color: white;
+    }
+    .pagination>.active>a {
+        color: black !important;
+        background-color: white !Important;
+        border: solid 1px white !Important;
+    }
+    .pagination>.active>a:hover {
+        background-color: white !Important;
+        border: solid 1px white;
+    }
+</style>
+{% endblock %}
 
 {% block body %}
-<h2 class="mb-4 mt-4">User Management Page</h2>
-    
-<button class="btn btn-outline-success my-5" onclick="syncDb()"><i class="fa fa-refresh mx-1" aria-hidden="true"></i>Ocpasswd Synchronise</button>
+<h2 class="mt-4">User Management Page</h2>
 
+<button class="btn btn-outline-success my-3" onclick="syncDb()">
+    <i class="fa fa-refresh mx-1" aria-hidden="true"></i>
+    Ocpasswd Synchronise
+</button>
+<table class="table table-striped table-dark">
+    <thead>
+        <tr class="text-center">
+            <th scope="col">Row</th>
+            <th scope="col">Ocserv Username</th>
+            <th scope="col">Ocserv Password</th>
+            <th scope="col">Expire Date</th>
+            <th scope="col">Active</th>
+            <th scope="col">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for user in object_list %}
+        <tr class="text-center">
+            <th scope="row">{{ forloop.counter }}</th>
+            <td>{{ user.oc_username }}</td>
+            <td>{{ user.oc_password }}</td>
+            <td>{{ user.expire_date | date:'Y-m-d' }}</td>
+            <td>{{ user.oc_active }}</td>
+            <td>
+                {% if user.oc_active %}
+                <button class="btn btn-outline-warning btn-sm mx-1" onclick="userHandler('{{ user.id }}', 'deactive')"
+                    id="deactive-{{ user.id }}">
+                    Deactive
+                </button>
+                {% else %}
+                <button class="btn btn-outline-info btn-sm  mx-1" onclick="userHandler('{{ user.id }}', 'active')"
+                    id="active-{{ user.id }}">
+                    Active
+                </button>
+                {% endif %}
 
-            <table class="table table-striped table-dark">
-                <thead>
-                    <tr class="text-center">
-                        <th scope="col">Row</th>
-                        <th scope="col">Ocserv Username</th>
-                        <th scope="col">Ocserv Password</th>
-                        <th scope="col">Active</th>
-                        <th scope="col">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for user in object_list %}
-                    <tr class="text-center">
-                        <th scope="row">{{ forloop.counter }}</th>
-                        <td>{{ user.oc_username }}</td>
-                        <td>{{ user.oc_password }}</td>
-                        <td>{{ user.oc_active }}</td>
-                        <td>
-                            {% if user.oc_active %}
-                            <button class="btn btn-outline-warning btn-sm mx-1" onclick="userHandler('{{ user.id }}', 'deactive')"
-                                id="deactive-{{ user.id }}">
-                                Deactive
-                            </button>
-                            {% else %}
-                            <button class="btn btn-outline-info btn-sm  mx-1" onclick="userHandler('{{ user.id }}', 'active')"
-                                id="active-{{ user.id }}">
-                                Active
-                            </button>
-                            {% endif %}
-
-                            <button class="btn btn-outline-danger btn-sm" onclick="deleteUser('{{ user.id }}')"
-                                id="del-{{ user.id }}">Delete</button>
-                            <button class="btn btn-outline-danger btn-sm" style="display: none;"
-                                onclick="confirmDelete('{{ user.id }}')" id="confirm-{{ user.id }}">Delete</button>
-                            <button class="btn btn-outline-light btn-sm mx-1" style="display: none;"
-                                onclick="cancelDelete('{{ user.id }}')" id="cancel-{{ user.id }}">Cancel</button>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                <button class="btn btn-outline-danger btn-sm" onclick="deleteUser('{{ user.id }}')"
+                    id="del-{{ user.id }}">Delete</button>
+                <button class="btn btn-outline-danger btn-sm" style="display: none;"
+                    onclick="confirmDelete('{{ user.id }}')" id="confirm-{{ user.id }}">Delete</button>
+                <button class="btn btn-outline-light btn-sm mx-1" style="display: none;"
+                    onclick="cancelDelete('{{ user.id }}')" id="cancel-{{ user.id }}">Cancel</button>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% if page_obj.has_next or page_obj.has_previous %}
+<nav aria-label="Page navigation bg-dark" class="mt-5 mb-5">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous and page_obj.paginator.num_pages > 5 %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            </li>
+        {% endif %}
+        {% for i in page_obj.paginator.page_range %}
+            {% if page_obj.number == i %}
+                <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+            {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} 
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                </li>
+            {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next and page_obj.paginator.num_pages > 5 %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+            </li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
 
 <script>
     function deleteUser(userId) {
@@ -86,7 +139,7 @@
             url: "handler_user/",
             data: {
                 'user_id': userId,
-                'action' : action,
+                'action': action,
             },
             success: function (response) {
                 location.reload(true);
