custom deactive user command created, fix some bugs

--- a/app/templates/add_user.html
+++ b/app/templates/add_user.html
@@ -21,6 +21,7 @@
                             <div class="form-group mb-3">
                                 <label class="mb-2" for="expire_date">Expiration Date : </label>
                                 {{ form.expire_date }}
+                                <small class="text-capitalize text-success">leave blank for the user without an expiration date </small>
                             </div>
                         </div>
                         <div class="col-4">
