--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block head %}
 <style>
     .pagination>li>a {
@@ -24,15 +24,26 @@
         border: solid 1px white;
     }
 </style>
+</style>
 {% endblock %}
 
 {% block body %}
 <h2 class="mt-4">User Management Page</h2>
-
-<button class="btn btn-outline-success my-3" onclick="syncDb()">
-    <i class="fa fa-refresh mx-1" aria-hidden="true"></i>
-    Ocpasswd Synchronise
-</button>
+{% if search %}
+<div class="row mt-4 mb-4">
+    <div class="col-3">
+        <div class="ui-widget">
+            <input id="userSearch" placeholder="Search User" class="form-control">
+        </div>
+    </div>
+    <div class="col-2" style="margin-left: auto;margin-right: 60px;">
+        <button class="btn btn-outline-success" onclick="syncDb()">
+            <i class="fa fa-refresh mx-1" aria-hidden="true"></i>
+            Ocpasswd Synchronise
+        </button>
+    </div>
+</div>
+{% endif %}
 <table class="table table-striped table-dark">
     <thead>
         <tr class="text-center">
@@ -47,7 +58,7 @@
     <tbody>
         {% for user in object_list %}
         <tr class="text-center">
-            <th scope="row">{{ user.create | date:'Y-m-d' }}</th>
+            <td scope="row">{{ user.create | date:'Y-m-d' }}</td>
             <td>{{ user.oc_username }}</td>
             <td>{{ user.oc_password }}</td>
             <td>{{ user.expire_date | date:'Y-m-d' }}</td>
@@ -64,7 +75,6 @@
                     Active
                 </button>
                 {% endif %}
-
                 <button class="btn btn-outline-danger btn-sm" onclick="deleteUser('{{ user.id }}')"
                     id="del-{{ user.id }}">Delete</button>
                 <button class="btn btn-outline-danger btn-sm" style="display: none;"
@@ -80,26 +90,32 @@
 <nav aria-label="Page navigation bg-dark" class="mt-5 mb-5">
     <ul class="pagination justify-content-center">
         {% if page_obj.has_previous and page_obj.paginator.num_pages > 5 %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-            </li>
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        </li>
         {% endif %}
         {% for i in page_obj.paginator.page_range %}
-            {% if page_obj.number == i %}
-                <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-            {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} 
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                </li>
+        {% if page_obj.number == i %}
+        <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+        {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} <li class="page-item">
+            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+            </li>
             {% endif %}
-        {% endfor %}
-        {% if page_obj.has_next and page_obj.paginator.num_pages > 5 %}
+            {% endfor %}
+            {% if page_obj.has_next and page_obj.paginator.num_pages > 5 %}
             <li class="page-item">
                 <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
             </li>
-        {% endif %}
+            {% endif %}
     </ul>
 </nav>
+{% endif %}
+
+{% if not search %}
+<div class="text-center mt-3">
+    <button onclick="window.location.href='/';" class="btn btn-outline-success btn-lg mx-3">Home</button>
+    <button onclick="window.history.back();" class="btn btn-outline-light btn-lg">back</button>
+</div>
 {% endif %}
 
 <script>
@@ -110,7 +126,6 @@
         $('#deactive-' + userId).css('display', 'none');
         $('#active-' + userId).css('display', 'none');
     }
-
     function cancelDelete(userId) {
         $('#del-' + userId).css('display', 'inline');
         $('#confirm-' + userId).css('display', 'none');
@@ -118,10 +133,9 @@
         $('#deactive-' + userId).css('display', 'inline');
         $('#active-' + userId).css('display', 'inline');
     }
-
     function confirmDelete(userId) {
         $.ajax({
-            url: "del_user/",
+            url: "/del_user/",
             data: {
                 'user_id': userId,
             },
@@ -133,10 +147,9 @@
             }
         });
     }
-
     function userHandler(userId, action) {
         $.ajax({
-            url: "handler_user/",
+            url: "/handler_user/",
             data: {
                 'user_id': userId,
                 'action': action,
@@ -149,7 +162,6 @@
             }
         });
     }
-
     function syncDb() {
         $.ajax({
             url: "sync_db/",
@@ -161,9 +173,24 @@
             }
         });
     }
-
-
+    $(function () {
+        $("#userSearch").autocomplete({
+            source: function (request, response) {
+                $.ajax({
+                    url: "/search_user/",
+                    data: {
+                        search_param: request.term
+                    },
+                    success: function (data) {
+                        response(data);
+                    }
+                });
+            },
+            minLength: 2,
+            select: function (event, ui) {
+                location.href = '/' + ui.item.id + "/";
+            }
+        });
+    });
 </script>
-
-
 {% endblock %}
